add Title Label & it localization; add Logo Image View

--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -20,3 +20,9 @@
 "Help"                          =   "Help";
 "OmnieSoft"                     =   "OmnieSoft";
 "Sign Out"                      =   "Sign Out";
+
+
+// Labels
+"Welcome"                       =   "Welcome!";
+"Registration"                  =   "Registration";
+"Forgot password"               =   "Forgot Password";
