--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -20,3 +20,9 @@
 "Help"                          =   "Справка";
 "OmnieSoft"                     =   "OmnieSoft";
 "Sign Out"                      =   "Выйти";
+
+
+// Labels
+"Welcome"                       =   "Поздравляем!";
+"Registration"                  =   "Регистрация";
+"Forgot password"               =   "Забыли пароль";
