--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -20,3 +20,9 @@
 "Help"                          =   "Справка";
 "OmnieSoft"                     =   "OmnieSoft";
 "Sign Out"                      =   "Вийти";
+
+
+// Labels
+"Welcome"                       =   "Вітаємо!";
+"Registration"                  =   "Реєстрація";
+"Forgot password"               =   "Забули пароль";
