add CustomButton & colors schemes

--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -31,3 +31,7 @@
 // Fields
 "Name"                          =   "Имя";
 "Password"                      =   "Пароль";
+
+
+// Buttons
+"Sign In"                       =   "Войти";
