--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -31,3 +31,7 @@
 // Fields
 "Name"                          =   "Ім'я";
 "Password"                      =   "Пароль";
+
+
+// Buttons
+"Sign In"                       =   "Зайти";
