--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -31,3 +31,7 @@
 // Fields
 "Name"                          =   "Name";
 "Password"                      =   "Password";
+
+
+// Buttons
+"Sign In"                       =   "Sign In";
