add transitions from SignInShow to other scenes.

--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -38,3 +38,4 @@
 "Sign In"                       =   "Войти";
 "Register"                      =   "Зарегистрироваться";
 "Forgot password?"              =   "Забыли пароль?";
+"Cancel"                        =   "Отменить";
