--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -38,3 +38,4 @@
 "Sign In"                       =   "Зайти";
 "Register"                      =   "Зареєструватись";
 "Forgot password?"              =   "Забули пароль?";
+"Cancel"                        =   "Відмінити";
