--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -38,3 +38,4 @@
 "Sign In"                       =   "Sign In";
 "Register"                      =   "Register";
 "Forgot password?"              =   "Forgot Password?";
+"Cancel"                        =   "Cancel";
