--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -27,7 +27,9 @@
 "Registration"                  =   "Регистрация";
 "Forgot password"               =   "Забыли пароль";
 "Not yet registered?"           =   "Ещё не зарегистрированы";
-"Wrong Number or Email"         =   "* неправильный номер или Email";
+"Enter code"                    =   "Введите код";
+"Wrong Number or Email"         =   "* Неправильный номер или Email";
+"Invalid code"                  =   "* Ошибочный код. Попытайтесь ще раз";
 
 
 // Fields
@@ -42,3 +44,4 @@
 "Forgot password?"              =   "Забыли пароль?";
 "Cancel"                        =   "Отменить";
 "Send"                          =   "Отправить";
+"Do not get password?"          =   "Не получили пароль?";
