--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 // Labels
 "Welcome"                       =   "Welcome!";
 "Registration"                  =   "Registration";
-"Forgot password"               =   "Forgot Password";
+"Forgot password"               =   "Forgot Password?";
 "Not yet registered?"           =   "Not yet registered?";
 "Enter code"                    =   "Enter code";
 "Wrong Number or Email"         =   "* Wrong Number or Email";
@@ -36,6 +36,8 @@
 "Name"                          =   "Name";
 "Password"                      =   "Password";
 "Phone or Email"                =   "Phone or Email";
+"Email"                         =   "Email";
+"Enter Code"                    =   "Enter Code";
 
 
 // Buttons
