--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -25,8 +25,8 @@
 // Labels
 "Welcome"                       =   "Поздравляем!";
 "Registration"                  =   "Регистрация";
-"Forgot password"               =   "Забыли пароль";
-"Not yet registered?"           =   "Ещё не зарегистрированы";
+"Forgot password"               =   "Забыли пароль?";
+"Not yet registered?"           =   "Ещё не зарегистрированы?";
 "Enter code"                    =   "Введите код";
 "Wrong Number or Email"         =   "* Неправильный номер или Email";
 "Invalid code"                  =   "* Ошибочный код. Попытайтесь ще раз";
@@ -36,6 +36,8 @@
 "Name"                          =   "Имя";
 "Password"                      =   "Пароль";
 "Phone or Email"                =   "Телефон или Email";
+"Email"                         =   "Email";
+"Enter Code"                    =   "Введите код из сообщения";
 
 
 // Buttons
