--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 // Labels
 "Welcome"                       =   "Вітаємо!";
 "Registration"                  =   "Реєстрація";
-"Forgot password"               =   "Забули пароль?";
+"Forgot password"               =   "Забули пароль";
 "Not yet registered?"           =   "Ще не зареєстровані?";
 "Enter code"                    =   "Введіть код";
 "Wrong Number"                  =   "* Неправильний номер";
