--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 // Labels
 "Welcome"                       =   "Welcome!";
 "Registration"                  =   "Registration";
-"Forgot password"               =   "Forgot Password?";
+"Forgot password"               =   "Forgot Password";
 "Not yet registered?"           =   "Not yet registered?";
 "Enter code"                    =   "Enter code";
 "Wrong Number"                  =   "* Wrong Number";
