RepetitionPasswordShow: create & add design; add validation.

--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -53,3 +53,4 @@
 "Do not get password?"          =   "Do not get Password?";
 "Send again"                    =   "Send Again";
 "Enter"                         =   "Enter";
+"Submit"                        =   "Submit";
