--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -53,3 +53,4 @@
 "Do not get password?"          =   "Не получили пароль?";
 "Send again"                    =   "Отправить ещё раз";
 "Enter"                         =   "Войти";
+"Submit"                        =   "Подтвердить";
