--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -53,3 +53,5 @@
 "Do not get password?"          =   "Не отримали пароль?";
 "Send again"                    =   "Відправити ще раз";
 "Enter"                         =   "Зайти";
+"Submit"                        =   "Підтвердити";
+
