SignInContainerShowRouter: add VIP-cicle for SignUn button

--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -54,3 +54,9 @@
 "Send again"                    =   "Send Again";
 "Enter"                         =   "Enter";
 "Submit"                        =   "Submit";
+"Ok"                            =   "Ok";
+
+
+// Alerts
+"Info"                          =   "Info";
+"Error"                         =   "Error";
