--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -54,3 +54,9 @@
 "Send again"                    =   "Отправить ещё раз";
 "Enter"                         =   "Войти";
 "Submit"                        =   "Подтвердить";
+"Ok"                            =   "Ok";
+
+
+// Alerts
+"Info"                          =   "Инфо";
+"Error"                         =   "Ошибка";
