--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -54,4 +54,9 @@
 "Send again"                    =   "Відправити ще раз";
 "Enter"                         =   "Зайти";
 "Submit"                        =   "Підтвердити";
+"Ok"                            =   "Ok";
 
+
+// Alerts
+"Info"                          =   "Інфо";
+"Error"                         =   "Помилка";
