--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -7,7 +7,7 @@
  */
 
 // Menu Items
-"My organization"               =   "Мои организации";
+"My organizations"              =   "Мои организации";
 "Services"                      =   "Услуги";
 "Orders"                        =   "Заказы";
 "Messages"                      =   "Сообщения";
@@ -33,6 +33,7 @@
 "Wrong Number or Email"         =   "* Неправильный номер или Email";
 "Invalid code"                  =   "* Ошибочный код. Попытайтесь ще раз";
 "New password"                  =   "Новый пароль";
+"To add organization"           =   "Чтобы добавить организацию нажмите";
 
 
 // Fields
@@ -55,6 +56,7 @@
 "Enter"                         =   "Войти";
 "Submit"                        =   "Подтвердить";
 "Ok"                            =   "Ok";
+"Here"                          =   "здесь";
 
 
 // Alerts
