--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -34,20 +34,25 @@
 "Invalid code"                  =   "* Ошибочный код. Попытайтесь ще раз";
 "New password"                  =   "Новый пароль";
 "To add organization"           =   "Чтобы добавить организацию нажмите";
+"Add organization"              =   "Добавить организацию";
 
 
 // Fields
 "Name"                          =   "Имя";
 "Password"                      =   "Пароль";
+"Phone"                         =   "Телефон";
 "Phone or Email"                =   "Телефон или Email";
 "Email"                         =   "Email";
 "Enter Code"                    =   "Введите код из сообщения";
 "Repeat password"               =   "Повторить пароль";
+"Address"                       =   "Адрес";
+"Address organization"          =   "Адрес организации";
 
 
 // Buttons
 "Sign In"                       =   "Войти";
 "Register"                      =   "Зарегистрироваться";
+"Registering"                   =   "Зарегистрировать";
 "Forgot password?"              =   "Забыли пароль?";
 "Cancel"                        =   "Отменить";
 "Send"                          =   "Отправить";
@@ -57,6 +62,7 @@
 "Submit"                        =   "Подтвердить";
 "Ok"                            =   "Ok";
 "Here"                          =   "здесь";
+"Add"                           =   "Добавить";
 
 
 // Alerts
