modify Custom button for circle fill style

--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 "New password"                  =   "New Password";
 "To add organization"           =   "To add organization press";
 "Add organization"              =   "Add Organization";
+"Organization Name"             =   "Organization Name";
 
 
 // Fields
