--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 "New password"                  =   "Новый пароль";
 "To add organization"           =   "Чтобы добавить организацию нажмите";
 "Add organization"              =   "Добавить организацию";
+"Organization Name"             =   "Название организации";
 
 
 // Fields
