--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 "New password"                  =   "Новий пароль";
 "To add organization"           =   "Щоб добавити організацію натисніть";
 "Add organization"              =   "Додати організацію";
+"Organization Name"             =   "Назва організації";
 
 
 // Fields
