start/stop Location manager

--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -63,9 +63,10 @@
 "Submit"                        =   "Submit";
 "Ok"                            =   "Ok";
 "Here"                          =   "here";
-"Add"                           =   "Add";
+"Add"                           =   "Add +";
 
 
 // Alerts
 "Info"                          =   "Info";
 "Error"                         =   "Error";
+
