--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -63,9 +63,10 @@
 "Submit"                        =   "Подтвердить";
 "Ok"                            =   "Ok";
 "Here"                          =   "здесь";
-"Add"                           =   "Добавить";
+"Add"                           =   "Добавить +";
 
 
 // Alerts
 "Info"                          =   "Инфо";
 "Error"                         =   "Ошибка";
+
