--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -63,13 +63,12 @@
 "Submit"                        =   "Підтвердити";
 "Ok"                            =   "Ok";
 "Here"                          =   "тут";
-"Add"                           =   "Додати";
+"Add"                           =   "Додати +";
 
 
 // Alerts
 "Info"                          =   "Інфо";
 "Error"                         =   "Помилка";
-
 
 
 
