add Geocoding user position

--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -69,4 +69,5 @@
 // Alerts
 "Info"                          =   "Инфо";
 "Error"                         =   "Ошибка";
+"Location authorization error"  =   "Пожалуйста, перейдите в Настройки и включите службу геолокации";
 
