--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -69,6 +69,7 @@
 // Alerts
 "Info"                          =   "Інфо";
 "Error"                         =   "Помилка";
+"Location authorization error"  =   "Будь ласка, перейдіть в Налаштування та включіть службу геолокації";
 
 
 
