--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -69,4 +69,5 @@
 // Alerts
 "Info"                          =   "Info";
 "Error"                         =   "Error";
+"Location authorization error"  =   "Please go into Settings and give this app authorization to your location";
 
