add search by address

--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 "To add organization"           =   "To add organization press";
 "Add organization"              =   "Add Organization";
 "Organization Name"             =   "Organization Name";
+"Enter organization name"       =   "Enter Organization Name";
 
 
 // Fields
