--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 "To add organization"           =   "Чтобы добавить организацию нажмите";
 "Add organization"              =   "Добавить организацию";
 "Organization Name"             =   "Название организации";
+"Enter organization name"       =   "Введите название организации";
 
 
 // Fields
