--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 "To add organization"           =   "Щоб добавити організацію натисніть";
 "Add organization"              =   "Додати організацію";
 "Organization Name"             =   "Назва організації";
+"Enter organization name"       =   "Вкажіть назву організації";
 
 
 // Fields
