create MediaManager for work with album & camera

--- a/OmnieCommerceAdmin/Resources/ru.lproj/InfoPlist.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/InfoPlist.strings
@@ -10,3 +10,5 @@
 
 // Values
 "NSLocationWhenInUseUsageDescription"           =   "Разрешите определять ваше текущее положение для атоматического заполнения адресных данных";
+"NSPhotoLibraryUsageDescription"                =   "Разрешите использовать альбомные фотографии для заполнения анкетных данных";
+"NSCameraUsageDescription"                      =   "Разрешите использовать камеру для создания фотографий";
