--- a/OmnieCommerceAdmin/Resources/uk.lproj/InfoPlist.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/InfoPlist.strings
@@ -10,3 +10,5 @@
 
 // Values
 "NSLocationWhenInUseUsageDescription"           =   "Дозвольте визначати ваше поточне положення для автоматичного заповнення адресних даних";
+"NSPhotoLibraryUsageDescription"                =   "Дозвольте використовувати альбомні фотографії для заповнення анкетних даних";
+"NSCameraUsageDescription"                      =   "Дозвольте використовувати камеру для створення фотографій";
