--- a/OmnieCommerceAdmin/Resources/en.lproj/InfoPlist.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/InfoPlist.strings
@@ -4,9 +4,13 @@
 
   http://stackoverflow.com/questions/25736700/how-to-localise-a-string-inside-the-ios-info-plist-file
  
-  Created by msm72 on 11.02.17.
+  https://developer.apple.com/library/prerelease/content/qa/qa1937/_index.html
+  
+ Created by msm72 on 11.02.17.
   Copyright © 2017 Omniesoft. All rights reserved.
 */
 
 // Values
 "NSLocationWhenInUseUsageDescription"           =   "Allow to determine your current location to automatically fill in the address data";
+"NSPhotoLibraryUsageDescription"                =   "";
+"NSCameraUsageDescription"                      =   "";
