--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -71,4 +71,5 @@
 "Info"                          =   "Инфо";
 "Error"                         =   "Ошибка";
 "Location authorization error"  =   "Пожалуйста, перейдите в Настройки и включите службу геолокации";
+"Camera is not available"       =   "Отсутствует доступ к камере";
 
