--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -71,6 +71,7 @@
 "Info"                          =   "Інфо";
 "Error"                         =   "Помилка";
 "Location authorization error"  =   "Будь ласка, перейдіть в Налаштування та включіть службу геолокації";
+"Camera is not available"       =   "Відсутній доступ до камери";
 
 
 
