add pass it between this 2 scenes forward/reverse

--- a/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/en.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "Add organization"              =   "Add Organization";
 "Organization Name"             =   "Organization Name";
 "Enter organization name"       =   "Enter Organization Name";
+"Enter organization address"    =   "Enter Organization Address";
 
 
 // Fields
