--- a/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/uk.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "Add organization"              =   "Додати організацію";
 "Organization Name"             =   "Назва організації";
 "Enter organization name"       =   "Вкажіть назву організації";
+"Enter organization address"    =   "Вкажіть адресу організації";
 
 
 // Fields
