--- a/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
+++ b/OmnieCommerceAdmin/Resources/ru.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "Add organization"              =   "Добавить организацию";
 "Organization Name"             =   "Название организации";
 "Enter organization name"       =   "Введите название организации";
+"Enter organization address"    =   "Введите адрес организации";
 
 
 // Fields
